--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-07-stats-remove.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/3-guided-tour/01-07-stats-remove.mdx
@@ -4,45 +4,34 @@ sidebar:
     label: " - Removing Data"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
+import Aside from "/src/components/Aside.astro"
 
-Removing a value is much more challenging than adding a value, but will be great for seeing how to work with arrays.
+Removing a value is one of those deceptively challenging aspects of arrays.
 
-We can't actually remove an element from an array. Instead, we move data around within the array, and adjust the number of elements we are using to have the same effect. There are two options for removing an element, as shown in the image below. Both options relate to how we retain the existing data when replacing the element being removed.
+`dynamic_array` makes it simple to remove an element - we just call the `remove(dynamic_array<T>& array, int index)` procedure, pass in the `dynamic_array` and the index to remove, and the element is gone!
 
-![Two options for removing an element](./images/remove-options.png)
+But what does it really mean to remove an element? We can't really "remove" memory, can we? We'll explore this in more depth later on, but for now let's have a brief look at what's going on.
 
-## Option 1 - move the last element
+The key thing to remember, is that we can't _actually_ remove an element from an array - not even the `dynamic_array`! Instead, the data inside the `dynamic_array` is **moving** around within itself.
 
-The easy way to do this would be to swap the last element of the array into the location where the element to be removed is. Then reduce the size, so that the old last element is no longer considered to be part of the data.
+Let's visualize this. If we started with an array like so:
+|Index|0 |1 |2 |3 |4 |
+|-----|--|--|--|--|--|
+|Value|1 |6 | 8| 9| 5|
 
-![Overview of option 1](./images/remove-option-1.png)
+And we _removed_ the `6`, our array looks like:
+|Index|0 |1 |2 |3 |
+|-----|--|--|--|--|
+|Value|1 | 8| 9| 5|
 
-```plaintext
-Procedure: Remove Element
-Parameters:
-- data: reference to number data
-Local variables:
-- index: integer of element to remove
-Steps:
-- Call print to output the values in the array with their indexes
-- Ask the user which index to remove
-- If it is less than 0 or larger than the max index
-  - Output an error message
-  - Return
-- Store the last element of data.values in data.values[index]
-- Reduce data.size by one
-```
+Notice how the `8`, `9`, and `5` have simply moved backwards by one index? This is generally how dynamic arrays actually remove their elements - they move every element backwards You can imagine that if you have a million elements, this might become quite a costly operation!
 
-Once we have the index, we can validate it to ensure it is within the appropriate range. If not, we can return with an error message. The removal itself is then simply the process of copying the data from the last element to the index we want to remove and reducing the size. As you can see in the image above, the 7 is removed and the 1 is retained, just in a new location in the array.
+We'll come back to this when we build our own `dynamic_array` later on. For now, let's go ahead and add a `remove_value` procedure, and enjoy the convenience of the `dynamic_array`'s `remove` ability.
 
-:::note
-The value at index 5 will still be 1 in our example. This does not matter, as you only have 5 values, so we read from index 0 to 4. When we add a new value, it will be written over the 1 in index 5.
-:::
-
-Have a go at coding this option. Remember to call it in main, and test it out with a few values.
+We'll ask the user for an index to remove, then `remove` it. Make sure to _validate_ the index the user provides. Have a think about the _range_ of values that we can delete from - what happens if the user enters an index outside of that range?
 
 <Accordion>
-<AccordionItem header="Code for remove using swap">
+<AccordionItem header="Code for remove">
 
 ```cpp
 /**
@@ -50,16 +39,15 @@ Have a go at coding this option. Remember to call it in main, and test it out wi
  *
  * @param data the array of values
  */
-void remove_value(number_data &data)
+void remove_value(dynamic_array<double> &data)
 {
   print(data);
 
   int index = read_integer("Enter the index of the value to remove: ");
 
-  if (index >= 0 && index < data.size)
+  if (index >= 0 && index < length(data))
   {
-    data.values[index] = data.values[data.size - 1];
-    data.size--;
+    remove(data, index);
   }
   else
   {
@@ -71,76 +59,7 @@ void remove_value(number_data &data)
 </AccordionItem>
 </Accordion>
 
-:::tip[Thought exercise]
-
-What happens if there is only one element in the array, and you remove it?
-
-:::
-
-## Option 2 - Shifting elements one by one
-
-If you want to keep the order the same, then we need to shift more values around. In fact, we need to move *each* value that occurs after the element we are removing back one position in the array.
-
-![Overview of option 2](./images/remove-option-2.png)
-
-Most of the removal logic would remain the same, but now we need a for loop to loop for each element after index. Within that loop we can copy the values back one position in the array. Here we need to work with two positions in the array at the same time. As they are adjacent to each other we can use `i` and `i - 1`. Where `i` is the current element in the array (from the perspective of the for loop) and `i - 1` is one position earlier in the array. Similarly, we can use `i + 1` if we wanted the next position in the array.
-
-```plaintext
-Procedure: Remove Element
-Parameters:
-- data: reference to number data
-Local variables:
-- index: integer of element to remove
-- i: integer to loop over array
-Steps:
-- Output the values in the array with their indexes
-- Ask the user which index to remove
-- If it is less than 0 or larger than the max index
-  - Output an error message
-  - Return
-- For i = index + 1 to last index ( while i < data.size)
-  - Set data.values[i - 1] = data.values[i]
-- Reduce data.size by one
-```
-
-Any time you are using something like `i + 1` or `i - 1` to access an array element, you need to think about the array boundaries. You want to make sure your code can never go past the end of the array (back past the start, or on past the end). In our case, we start at `index + 1` and index much be >= 0. Therefore, `i - 1` will never read past the start of the array.
-
-Have a go at coding this option. Comment out your original code so that you can keep a record of this and go back to it if you want to play with it further.
-
-<Accordion>
-<AccordionItem header="Code for remove by shifting">
-
-```cpp {14-17}
-/**
- * Remove a value from the array
- *
- * @param data the array of values
- */
-void remove_value(number_data &data)
-{
-  print(data);
-
-  int index = read_integer("Enter the index of the value to remove: ");
-
-  if (index >= 0 && index < data.size)
-  {
-    for (int i = index + 1; i < data.size; i++)
-    {
-      data.values[i - 1] = data.values[i];
-    }
-    data.size--;
-  }
-  else
-  {
-    write_line("Sorry, that is not a valid index.");
-  }
-}
-```
-
-</AccordionItem>
-</Accordion>
-
-Make sure to test this out before moving on.
+Make sure to test this out before moving on - try entering indexes that don't make sense and see how your program handles it.
 
 ## Summary
 
@@ -153,47 +72,26 @@ Remember the point of this exercise has been to work through the actions you can
 /* stats-calc.cpp - from the field guide. written by ... */
 
 #include "splashkit.h"
+#include "splashkit-arrays.h"
 #include "utilities.h"
-
-// The maximum number of values we can store
-const int MAX_NUMBERS = 20;
-
-/**
- * The data structure to store the numbers
- *
- * @field values the array of values
- * @field size the number of values in the array - up to MAX_NUMBERS
- */
-struct number_data
-{
-  double values[MAX_NUMBERS];
-  int size;
-};
 
 /**
  * Populate the array with values entered by the user
  *
  * @param data the array of values (passed by reference)
  */
-void populate_array(number_data &data)
+void populate_array(dynamic_array<double> &data)
 {
   int size = read_integer("How many values do you want to enter? ");
-  if (size > MAX_NUMBERS)
-  {
-    write_line("Sorry, you can only enter " + to_string(MAX_NUMBERS) + " values.");
-    size = MAX_NUMBERS;
-  }
-  else if (size < 0)
+  if (size < 0)
   {
     size = 0;
   }
 
-  data.size = size;
-
-  // Populate each element - up to data.size
-  for (int i = 0; i < data.size; i++)
+  // Populate each element - up to size
+  for (int i = 0; i < size; i++)
   {
-    data.values[i] = read_double("Enter value: ");
+    add(data, read_double("Enter value: "));
   }
 }
 
@@ -202,11 +100,11 @@ void populate_array(number_data &data)
  *
  * @param data the array of values
  */
-void print(const number_data &data)
+void print(const dynamic_array<double> &data)
 {
-  for (int i = 0; i < data.size; i++)
+  for (int i = 0; i < length(data); i++)
   {
-    write_line(to_string(i) + ": " + to_string(data.values[i]));
+    write_line(to_string(i) + ": " + to_string(data[i]));
   }
 }
 
@@ -216,14 +114,14 @@ void print(const number_data &data)
  * @param data the array of values
  * @return the sum of the values
  */
-double sum(const number_data &data)
+double sum(const dynamic_array<double> &data)
 {
   int i;
   double result = 0;
 
-  for (i = 0; i < data.size; i++)
+  for (i = 0; i < length(data); i++)
   {
-    result += data.values[i];
+    result += data[i];
   }
 
   return result;
@@ -235,10 +133,10 @@ double sum(const number_data &data)
  * @param data the array of values
  * @returns the mean of the values
  */
-double mean(const number_data &data)
+double mean(const dynamic_array<double> &data)
 {
-  if (data.size > 0)
-    return sum(data) / data.size;
+  if (length(data) > 0)
+    return sum(data) / length(data);
   else
     return 0;
 }
@@ -249,50 +147,37 @@ double mean(const number_data &data)
  * @param data the array of values
  * @returns the largest value, or 0 if there are no values
  */
-double max(const number_data &data)
+double max(const dynamic_array<double> &data)
 {
   // Ensure there is data
-  if (data.size == 0)
+  if (length(data)== 0)
     return 0;
 
   // Assume the first value is the largest
-  double result = data.values[0];
+  double result = data[0];
 
   // Check the rest of the values
-  for (int i = 1; i < data.size; i++)
+  for (int i = 1; i < length(data); i++)
   {
-    if (data.values[i] > result)
+    if (data[i] > result)
     {
-      result = data.values[i];
+      result = data[i];
     }
   }
 
   return result;
 }
 
+
 /**
  * Add a value to the array
  *
  * @param data the array of values
  */
-void add_data(number_data &data)
+void add_data(dynamic_array<double> &data)
 {
-  if (data.size < MAX_NUMBERS)
-  {
-    // Ensure this works if size is negative
-    if (data.size < 0)
-    {
-      data.size = 0;
-    }
-
-    double value = read_double("Enter a value to add: ");
-    data.values[data.size] = value;
-    data.size++;
-  }
-  else
-  {
-    write_line("Sorry, you can only enter " + to_string(MAX_NUMBERS) + " values.");
-  }
+  double value = read_double("Enter a value to add: ");
+  add(data, value);
 }
 
 /**
@@ -300,19 +185,15 @@ void add_data(number_data &data)
  *
  * @param data the array of values
  */
-void remove_value(number_data &data)
+void remove_value(dynamic_array<double> &data)
 {
   print(data);
 
   int index = read_integer("Enter the index of the value to remove: ");
 
-  if (index >= 0 && index < data.size)
+  if (index >= 0 && index < length(data))
   {
-    for (int i = index; i < data.size - 1; i++)
-    {
-      data.values[i] = data.values[i + 1];
-    }
-    data.size--;
+    remove(data, index);
   }
   else
   {
@@ -339,7 +220,7 @@ void print_menu()
  */
 int main()
 {
-  number_data data = {{},0};
+  dynamic_array<double> data;
   int option;
 
   populate_array(data);
